--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -120,7 +120,7 @@
 			"upcoming_campaigns": "Upcoming campaigns",
 			"active_date": "Due on $date",
 			"participate_title": "How to participate",
-			"share": "Share on X",
+			"share": "Share",
 			"requirements_title": "Requirements",
 			"modal_button_text": "Got it",
 			"activity_button_text": "Check on Recent Activity"
