--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -123,7 +123,11 @@
 			"share": "Share",
 			"requirements_title": "Requirements",
 			"modal_button_text": "Got it",
-			"activity_button_text": "Check on Recent Activity"
+			"activity_button_text": "Check on Recent Activity",
+			"open_wallet": "Take me to the wallet",
+			"state_modal_title": "Congratulations on winning today's airdrop!",
+			"state_modal_title_jackpot": "Congratulations on winning today's highest airdrop!",
+			"state_modal_content_text": "Share your victory on Twitter to qualify for another chance to win."
 		},
 		"alt": {
 			"upcoming_campaigns": "Stay tuned for the upcoming airdrops - subscribe to OISY on X and follow recent updates."
