--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -118,7 +118,7 @@
 			"title": "Airdrops",
 			"active_campaigns": "Active campaigns",
 			"upcoming_campaigns": "Upcoming campaigns",
-			"active_date": "Due on $date",
+			"active_date": "Due on",
 			"participate_title": "How to participate",
 			"share": "Share",
 			"requirements_title": "Requirements",
