some code cleanups

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -116,7 +116,7 @@
 	"airdrops": {
 		"text": {
 			"title": "Airdrops",
-			"active_date": "Due on $date"
+			"active_date": "Due on"
 		}
 	},
 	"footer": {
