--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -115,7 +115,12 @@
 	},
 	"airdrops": {
 		"text": {
-			"title": "Airdrops"
+			"title": "Airdrops",
+			"share": "Share",
+			"open_wallet": "Take me to the wallet",
+			"state_modal_title": "Congratulations on winning today's airdrop!",
+			"state_modal_title_jackpot": "Congratulations on winning today's highest airdrop!",
+			"state_modal_content_text": "Share your victory on Twitter to qualify for another chance to win."
 		}
 	},
 	"footer": {
