--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -124,6 +124,8 @@
 			"requirements_title": "Requirements",
 			"modal_button_text": "Got it",
 			"activity_button_text": "Check on Recent Activity",
+			"no_balance_title": "Start earning",
+			"no_balance_description": "Check back later to see your rewards",
 			"open_wallet": "Take me to the wallet",
 			"state_modal_title": "Congratulations on winning today's airdrop!",
 			"state_modal_title_jackpot": "Congratulations on winning today's highest airdrop!",
