updates displayed text

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -126,7 +126,7 @@
 			"state_modal_content_text": "Share your victory on Twitter to qualify for another chance to win."
 		},
 		"alt": {
-			"upcoming_campaigns": "Stay tuned for the upcoming airdrops - subscribe to OISY on X and follow recent updates."
+			"upcoming_campaigns": "Stay tuned for the upcoming airdrops - subscribe to $oisy_short on X and follow recent updates."
 		}
 	},
 	"footer": {
