--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -125,9 +125,10 @@
 			"active_campaigns": "Active Opportunities",
 			"upcoming_campaigns": "Upcoming Opportunities",
 			"active_date": "Due on",
-			"participate_title": "How to participate",
+			"participate_title": "Participate and earn Sprinkles",
 			"share": "Share on X",
 			"learn_more": "Learn more",
+			"check_earnings": "Check your Earnings",
 			"requirements_title": "Requirements",
 			"modal_button_text": "Got it",
 			"activity_button_text": "Check on Recent Activity",
